--- a/index.html
+++ b/index.html
@@ -2500,6 +2500,12 @@ body { background:var(--void); color:var(--star-white); font-family:'Exo 2',sans
           <div class="room-status"><div class="status-dot yellow" id="rc-status-dot"></div> <span id="rc-status-text">3 of 11 revenue streams active</span></div>
         </div>
 
+        <!-- Your Registration Status (from Supabase) -->
+        <div class="boot-section" id="rcYourStatus" style="display:none;padding:0.8rem;background:rgba(0,230,118,0.03);border:1px solid rgba(0,230,118,0.12);border-radius:10px">
+          <div style="font-family:'Orbitron',monospace;font-size:0.5rem;letter-spacing:2px;color:rgba(0,230,118,0.6);margin-bottom:0.5rem">YOUR PLATFORMS</div>
+          <div id="rcYourStatusContent" style="display:flex;gap:1.5rem;flex-wrap:wrap"></div>
+        </div>
+
         <!-- ARTIST CONTEXT BANNER (Roster Mode) -->
         <div class="boot-section artist-context-banner" id="artistContextBanner" style="display:none">
           <div class="acb-avatar" id="acbAvatar">?</div>
@@ -2623,6 +2629,12 @@ body { background:var(--void); color:var(--star-white); font-family:'Exo 2',sans
             <div class="room-subtitle">Your full artist roster — royalty health, registration status, and revenue at a glance</div>
           </div>
           <div class="room-status"><div class="status-dot" id="roster-status-dot" style="background:#ff4081;box-shadow:0 0 6px #ff4081"></div> <span id="roster-status-text">4 Artists · Roster View Active</span></div>
+        </div>
+
+        <!-- Your Profile (from Supabase) -->
+        <div class="boot-section" id="rosterYourProfile" style="display:none">
+          <div style="font-family:'Orbitron',monospace;font-size:0.6rem;letter-spacing:2px;color:rgba(0,229,255,0.7);margin-bottom:0.6rem">YOUR ARTIST CARD</div>
+          <div id="rosterYourProfileCard" style="display:flex;align-items:center;gap:1rem;padding:0.8rem;background:rgba(0,229,255,0.04);border:1px solid rgba(0,229,255,0.15);border-radius:10px"></div>
         </div>
 
         <!-- Roster Summary Stats -->
@@ -2814,6 +2826,12 @@ body { background:var(--void); color:var(--star-white); font-family:'Exo 2',sans
           <!-- injected by JS -->
         </div>
 
+        <!-- Your Sessions (from calendar DB) -->
+        <div class="boot-section" id="studioYourSessions" style="display:none">
+          <div style="font-family:'Orbitron',monospace;font-size:0.6rem;letter-spacing:2px;color:rgba(0,188,212,0.7);margin-bottom:0.6rem">YOUR SESSIONS</div>
+          <div id="studioYourSessionsList" style="display:flex;flex-direction:column;gap:0.4rem"></div>
+        </div>
+
         <!-- Session list -->
         <div class="boot-section">
           <div class="rc-section-header">
@@ -2978,6 +2996,12 @@ body { background:var(--void); color:var(--star-white); font-family:'Exo 2',sans
             <div class="room-subtitle">Base plan + role add-ons — pay for what you actually need</div>
           </div>
           <div class="room-status"><div class="status-dot green"></div> <span>Annual billing saves up to 25%</span></div>
+        </div>
+
+        <!-- Your Status (from Supabase) -->
+        <div class="boot-section" id="pricingYourStatus" style="display:none;padding:0.8rem;background:rgba(0,229,255,0.03);border:1px solid rgba(0,229,255,0.12);border-radius:10px;margin-bottom:0">
+          <div style="font-family:'Orbitron',monospace;font-size:0.5rem;letter-spacing:2px;color:rgba(0,229,255,0.6);margin-bottom:0.5rem">YOUR STATUS</div>
+          <div id="pricingStatusContent" style="display:flex;gap:1.5rem;flex-wrap:wrap"></div>
         </div>
 
         <!-- Role selector -->
@@ -4244,6 +4268,10 @@ function switchRoom(roomId, navEl) {
         if (roomId === 'launch') setTimeout(lpInit, 200);
         if (roomId === 'stats') setTimeout(statsInit, 200);
         if (roomId === 'vault') setTimeout(vaultDBInit, 200);
+        if (roomId === 'studio') setTimeout(studioDBInit, 200);
+        if (roomId === 'roster') setTimeout(rosterDBInit, 200);
+        if (roomId === 'royalty') setTimeout(rcDBInit, 200);
+        if (roomId === 'pricing') setTimeout(pricingDBInit, 200);
       }
       // Every-visit refreshes (not just first boot)
       if (roomId === 'content') setTimeout(csBootDB, 300);
@@ -4251,6 +4279,10 @@ function switchRoom(roomId, navEl) {
       if (roomId === 'settings') setTimeout(settingsInit, 300);
       if (roomId === 'stats') setTimeout(statsInit, 300);
       if (roomId === 'vault') setTimeout(vaultDBInit, 300);
+      if (roomId === 'studio') setTimeout(studioDBInit, 300);
+      if (roomId === 'roster') setTimeout(rosterDBInit, 300);
+      if (roomId === 'royalty') setTimeout(rcDBInit, 300);
+      if (roomId === 'pricing') setTimeout(pricingDBInit, 300);
     }
     isTransitioning = false;
   }, 120);
@@ -8752,6 +8784,129 @@ function _freqStartEnv() {
   }
   if (_freqEnvAnim) cancelAnimationFrame(_freqEnvAnim);
   _freqEnvAnim = requestAnimationFrame(draw);
+}
+
+// ── STUDIO — Calendar-Wired Sessions ──
+async function studioDBInit() {
+  if (!_currentUser) return;
+  try {
+    const { data } = await _sb.from('calendar').select('*').eq('user_id', _currentUser.id).eq('event_type', 'session').order('scheduled_at', { ascending: false });
+    const sessions = data || [];
+    const panel = document.getElementById('studioYourSessions');
+    const list = document.getElementById('studioYourSessionsList');
+    if (sessions.length === 0) { panel.style.display = 'none'; return; }
+    panel.style.display = '';
+    list.innerHTML = sessions.map(s => {
+      const d = new Date(s.scheduled_at);
+      const statusColor = s.status === 'completed' ? '#00e676' : s.status === 'in_progress' ? '#ffab40' : '#00bcd4';
+      return `<div style="display:flex;align-items:center;gap:0.8rem;padding:0.7rem;background:rgba(0,188,212,0.04);border:1px solid rgba(0,188,212,0.12);border-radius:8px">
+        <div style="font-size:1rem">🎚️</div>
+        <div style="flex:1"><div style="color:#e8eaf6;font-size:0.72rem;font-weight:600">${esc(s.title)}</div><div style="color:rgba(232,234,246,0.35);font-size:0.55rem;font-family:'Space Mono',monospace;margin-top:0.15rem">${d.toLocaleDateString('en-US',{month:'short',day:'numeric',year:'numeric'})}${s.description?' · '+esc(s.description):''}</div></div>
+        <div style="color:${statusColor};font-size:0.5rem;font-family:'Space Mono',monospace;padding:0.2rem 0.5rem;border:1px solid ${statusColor}33;border-radius:12px">${(s.status||'scheduled').toUpperCase()}</div>
+      </div>`;
+    }).join('');
+    console.log('[Studio] Loaded', sessions.length, 'sessions from DB');
+  } catch(e) { console.error('[Studio] DB init error:', e); }
+}
+
+// Override studioNewSession to write to calendar
+const _origStudioNewSession = typeof studioNewSession === 'function' ? studioNewSession : null;
+studioNewSession = async function() {
+  if (!_currentUser) { alert('Login required to create sessions.'); return; }
+  const title = prompt('Session name (e.g. "Night Drive — Final Mix"):');
+  if (!title) return;
+  const dateStr = prompt('Session date (YYYY-MM-DD):');
+  if (!dateStr) return;
+  const desc = prompt('Session type (mixing/mastering/collab):') || 'session';
+  try {
+    const { error } = await _sb.from('calendar').insert({
+      user_id: _currentUser.id, title: title, description: desc, event_type: 'session',
+      scheduled_at: dateStr + 'T00:00:00Z', status: 'scheduled'
+    });
+    if (error) throw error;
+    orbitalConfirm('SESSION BOOKED', 'transmit');
+    setTimeout(studioDBInit, 500);
+  } catch(e) { console.error('[Studio] Create error:', e); orbitalConfirm('CREATE FAILED','alert'); }
+};
+
+// ── ROSTER — Your Profile Card from Supabase ──
+async function rosterDBInit() {
+  if (!_currentUser) return;
+  try {
+    const { data: profile } = await _sb.from('profiles').select('*').eq('id', _currentUser.id).single();
+    if (!profile || !profile.display_name) return;
+    const panel = document.getElementById('rosterYourProfile');
+    const card = document.getElementById('rosterYourProfileCard');
+    panel.style.display = '';
+    const level = profile.ascent_level || _getAscentLevel(_userMilestones.size);
+    const levelName = level.charAt(0).toUpperCase() + level.slice(1);
+    const dspCount = profile.dsp_links ? Object.values(profile.dsp_links).filter(v=>v&&v.trim()).length : 0;
+    const socCount = profile.social_links ? Object.values(profile.social_links).filter(v=>v&&v.trim()).length : 0;
+    const initials = (profile.display_name || '??').split(' ').map(w=>w[0]).join('').slice(0,2).toUpperCase();
+    card.innerHTML = `
+      <div style="width:48px;height:48px;border-radius:50%;background:linear-gradient(135deg,#00e5ff,#7c4dff);display:flex;align-items:center;justify-content:center;font-family:'Orbitron',monospace;font-size:0.8rem;font-weight:700;color:#0a0e27;flex-shrink:0">${initials}</div>
+      <div style="flex:1">
+        <div style="color:#e8eaf6;font-family:'Orbitron',monospace;font-size:0.85rem;font-weight:600">${esc(profile.display_name)}</div>
+        <div style="color:rgba(232,234,246,0.4);font-size:0.6rem;font-family:'Space Mono',monospace;margin-top:0.2rem">${esc(profile.genre||'Genre not set')} · ${dspCount} DSPs · ${socCount} socials · ${levelName}</div>
+      </div>
+      <div style="display:flex;flex-direction:column;align-items:flex-end;gap:0.3rem">
+        <div style="color:#00e5ff;font-size:0.5rem;font-family:'Space Mono',monospace;padding:0.2rem 0.5rem;border:1px solid rgba(0,229,255,0.2);border-radius:12px">${(profile.role||'ARTIST').toUpperCase()}</div>
+        <div style="color:rgba(232,234,246,0.3);font-size:0.45rem;font-family:'Space Mono',monospace">${_userMilestones.size}/6 milestones</div>
+      </div>`;
+    // Update status
+    document.getElementById('roster-status-text').textContent = '4 Demo Artists + Your Profile';
+    console.log('[Roster] Your Profile card loaded');
+  } catch(e) { console.error('[Roster] DB init error:', e); }
+}
+
+// ── ROYALTY COMMAND — Your Registration Status ──
+async function rcDBInit() {
+  if (!_currentUser) return;
+  try {
+    const { data: profile } = await _sb.from('profiles').select('dsp_links,social_links').eq('id', _currentUser.id).single();
+    if (!profile) return;
+    const dspEntries = profile.dsp_links ? Object.entries(profile.dsp_links).filter(([k,v])=>v&&v.trim()) : [];
+    const panel = document.getElementById('rcYourStatus');
+    const content = document.getElementById('rcYourStatusContent');
+    panel.style.display = '';
+    const dspNames = dspEntries.map(([k]) => (_platformMeta[k]||{}).name || k);
+    content.innerHTML = `
+      <div><div style="color:#00e676;font-family:'Orbitron',monospace;font-size:1rem;font-weight:700">${dspEntries.length}</div><div style="color:rgba(232,234,246,0.4);font-size:0.5rem;font-family:'Space Mono',monospace;margin-top:0.15rem">DSPs Connected</div></div>
+      <div><div style="color:#ffab40;font-family:'Orbitron',monospace;font-size:1rem;font-weight:700">${Math.max(0, 7 - dspEntries.length)}</div><div style="color:rgba(232,234,246,0.4);font-size:0.5rem;font-family:'Space Mono',monospace;margin-top:0.15rem">DSPs Unclaimed</div></div>
+      <div><div style="color:rgba(232,234,246,0.5);font-size:0.55rem;font-family:'Space Mono',monospace;line-height:1.6">${dspNames.length > 0 ? '✓ ' + dspNames.join(' · ') : 'No platforms connected yet'}</div><div style="color:rgba(232,234,246,0.25);font-size:0.45rem;margin-top:0.2rem">Connect more in Identity Lab to unlock royalty tracking</div></div>`;
+    // Update status text
+    document.getElementById('rc-status-text').textContent = dspEntries.length + ' of 11 revenue streams active';
+    if (dspEntries.length >= 5) document.getElementById('rc-status-dot').style.background = '#00e676';
+    console.log('[Royalty] Your registration status loaded');
+  } catch(e) { console.error('[Royalty] DB init error:', e); }
+}
+
+// ── PRICING — Your Status Banner ──
+async function pricingDBInit() {
+  if (!_currentUser) return;
+  try {
+    const { data: profile } = await _sb.from('profiles').select('display_name,role,ascent_level,dsp_links,social_links').eq('id', _currentUser.id).single();
+    if (!profile) return;
+    const panel = document.getElementById('pricingYourStatus');
+    const content = document.getElementById('pricingStatusContent');
+    panel.style.display = '';
+    const level = profile.ascent_level || _getAscentLevel(_userMilestones.size);
+    const levelName = level.charAt(0).toUpperCase() + level.slice(1);
+    const dspCount = profile.dsp_links ? Object.values(profile.dsp_links).filter(v=>v&&v.trim()).length : 0;
+    const socCount = profile.social_links ? Object.values(profile.social_links).filter(v=>v&&v.trim()).length : 0;
+    const role = (profile.role||'artist');
+    content.innerHTML = `
+      <div><div style="color:#ce93d8;font-family:'Orbitron',monospace;font-size:0.85rem;font-weight:700">${levelName}</div><div style="color:rgba(232,234,246,0.4);font-size:0.45rem;font-family:'Space Mono',monospace;margin-top:0.15rem">Ascent Level</div></div>
+      <div><div style="color:#00e5ff;font-family:'Orbitron',monospace;font-size:0.85rem;font-weight:700">${dspCount + socCount}</div><div style="color:rgba(232,234,246,0.4);font-size:0.45rem;font-family:'Space Mono',monospace;margin-top:0.15rem">Platforms</div></div>
+      <div><div style="color:#00e676;font-family:'Orbitron',monospace;font-size:0.85rem;font-weight:700">${_userMilestones.size}/6</div><div style="color:rgba(232,234,246,0.4);font-size:0.45rem;font-family:'Space Mono',monospace;margin-top:0.15rem">Milestones</div></div>
+      <div><div style="color:#ffab40;font-family:'Orbitron',monospace;font-size:0.85rem;font-weight:700">${role.charAt(0).toUpperCase()+role.slice(1)}</div><div style="color:rgba(232,234,246,0.4);font-size:0.45rem;font-family:'Space Mono',monospace;margin-top:0.15rem">Role</div></div>`;
+    // Auto-set role tab if profile has role
+    if (profile.role && PRICING_ROLES[profile.role]) {
+      const tab = document.querySelector(`[data-role="${profile.role}"]`);
+      if (tab) pricingSetRole(profile.role, tab);
+    }
+    console.log('[Pricing] Your status loaded');
+  } catch(e) { console.error('[Pricing] DB init error:', e); }
 }
 
 // ── STATS EXPLORER — Dynamic Platform Count ──
